# world-editor

./: .env  .env.example  .eslintrc.js  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  README.md  SELECTION_MODE_ENTITY_IMPROVEMENTS.md  bun.lockb  craco.config.js  housetest.bp  package-lock.json  package.json  patch_instructions.txt  playwright.config.js  tsconfig.json  vercel.json
.claude/: settings.local.json
converted/: editor-converted.json
docs/: loading-process-breakdown.md  material-optimization-summary.md  model-drag-placement-issue.md  model-persistence-issue.md  object-pooling-implementation.md  particle-viewer-implementation-plan.md  performance-bottleneck-analysis.md  thumbnail-generation-guide.md  thumbnail-integration-summary.md
e2e/: basic-functionality.spec.js  block-placement.spec.js  block-selection.spec.js
electron/: main.js  preload.js
mc_importer/: mc_importer.d.ts  mc_importer.js  mc_importer_bg.wasm  mc_importer_bg.wasm.d.ts  package.json
playground-report2/: structure.json
public/: index.html
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: convert-axiom-bp-to-editor.js  generate-manifest-from-commit.js  generate-model-manifest.js  generate-model-thumbnails.js  parse-axiom-bp.js  update-assets.js  update-block-manifest.js  visualize-chunks.js
src/: 4_blocks_1_tree_2_tomb.json  App.js  App.tsx  App_old_working_import_export.js  index.tsx  react-three-fiber.d.ts  setupTests.ts  spooky_house_with_trees.json
test-blueprints/: 3_lane.bp  3lane_swap.bp  city_block_1.bp  construction_site.bp  desert_pyramid - Provided By Arperture.bp  (+12 more)
(+801 files in other folders)
