[package]
name = "mc_importer"
version = "0.1.0"
authors = ["devwkcd <dev.wckd@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6" }
fastanvil = "0.31.0"
web-sys = { version = "0.3.77", features = ["console"] }
serde-wasm-bindgen = "0.6.5"
glob-match = "0.2.1"
js-sys = "0.3.77"
instant = { version = "0.1.13", features = ["wasm-bindgen"] }

[profile.release]
opt-level = "s"
